--- a/index.html
+++ b/index.html
@@ -5,53 +5,53 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
-<body>
-  <header class="aaa">
-    <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
-    <a class="more_inf"
+<body class="tasks-body">
+  <header class="header">
+    <img class="header__matrix" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
+    <a class="header__more-info"
         href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
-  <main class="centered-main-page-element">
-    <section id="topSectionForAddingElementToList">
-      <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
+  <main class="main">
+    <section class="add-tasks">
+      <h3 class="section-title">Add Item</h3>
+      <div class="add-tasks__wrapper">
+        <input class="add-tasks__input" type="text">
+        <button class="button add-tasks__button">Add</button>
       </div>
     </section>
-    <section>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Remove">
+    <section class="todo-tasks">
+      <h3 class="section-title">Todo</h3>
+      <ul class="todo-tasks__list">
+        <li class="task-item">
+          <input class="task-item__checkbox" type="checkbox">
+          <label class="task-item__label">Pay Bills</label>
+          <input class="task-item__input" type="text">
+          <button class="button button_type_edit task-item__button">Edit</button>
+          <button class="button button_type_delete task-item__button">
+            <img class="button__remove-icon" src="./remove.svg" alt="Remove">
           </button>
         </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Remove">
+        <li class="task-item edit-mode">
+          <input class="task-item__checkbox" type="checkbox">
+          <label class="task-item__label">Go Shopping</label>
+          <input class="task-item__input" type="text" value="Go Shopping">
+          <button class="button button_type_edit task-item__button">Save</button>
+          <button class="button button_type_delete task-item__button">
+            <img class="button__remove-icon" src="./remove.svg" alt="Remove">
           </button>
         </li>
       </ul>
     </section>
-    <section>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Remove">
+    <section class="completed-tasks">
+      <h3 class="section-title">Completed</h3>
+      <ul class="completed-tasks__list">
+        <li class="task-item">
+          <input class="task-item__checkbox" type="checkbox" checked>
+          <label class="task-item__label">See the Doctor</label>
+          <input class="task-item__input" type="text">
+          <button class="button button_type_edit task-item__button">Edit</button>
+          <button class="button button_type_delete task-item__button">
+            <img class="button__remove-icon" src="./remove.svg" alt="Remove">
           </button>
         </li>
       </ul>
